--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
+  <link href="https://fonts.googleapis.com/css?family=Baloo|Handlee|Shadows+Into+Light+Two|Slabo+27px" rel="stylesheet"><body>
   <app-root>Loading...</app-root>
 </body>
 </html>
