css styling for community and users

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Baloo|Handlee|Shadows+Into+Light+Two|Slabo+27px" rel="stylesheet"><body>
+  <link href="https://fonts.googleapis.com/css?family=Baloo|Gloria+Hallelujah|Handlee|Shadows+Into+Light+Two|Slabo+27px" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <body>
   <app-root>Loading...</app-root>
 </body>
 </html>
